styles.css
/* ... */
.footer-widgets {
    padding-top: 80px;
    padding-bottom: 80px;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
    color: #aebdd1;
}

.last {
    margin-right: 0;
}

.widgettitle {
    font-size: 24px;
    color: #ffffff;
    padding-bottom: 24px;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.7);
}

.footer-logo {
    margin-top: -14px;
}

.footer-logo span {
    padding-left: 15px;
    color: #ffffff;
    font-style: italic;
    font-family: Georgia, serif;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.7);
    font-size: 11px;
}

.footer-widget .thumb {
    display:block;
    float:left;
    position:relative;
    margin-top: 6px;
    margin-right: 18px;
    margin-bottom:11px;
}

.footer-widget p {
    line-height: 21px;
}

.footer-widget a {
    color: #aebdd1;
}

.footer-widget a:hover {
    color: #ffffff;
    text-decoration: none;
}

.footer-widget ul {
    margin-bottom:8px;
}

.footer-widget ul ul {
    margin-bottom:0;
}

.footer-widget ul li {
    background:url(images/footer-bullet.png) no-repeat 0 7px;
    padding:0 0 10px 13px;
}

.footer-widget ul li ul {
    margin:0 0 -3px;
    padding:5px 0 0 7px;
}

.footer-bottom {
    clear: both;
    padding-bottom: 16px;
    padding-top: 26px;
    border-top: 1px solid #2c333e;
}

.black-footer{
    background-color: black;
}

.home-footer{
    background-color: #111721;
}

.green-footer{
    background-color: #131D19;
}

.purple-footer{
    background-color: #1D151F;
}

ul.bottom-nav li {
    float: left;
    font-size: 12px;
    padding-right: 19px;
}

ul.bottom-nav li a {
    color:#aebdd1;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
}

ul.bottom-nav > li.current_page_item > a {
    color: #ffffff;
    font-style: italic;
    font-family: Georgia, serif;
}

ul.bottom-nav li a:hover {
    text-decoration: none;
    color: #fff;
}

.copyright {
    float:right;
    font-size:12px;
    color:#aebdd1;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
}

.copyright a {
    font-style: italic;
    color:#ffffff;
    font-family: Georgia, serif;
}

/*------------------------------------------------*/
/*-------------------[PAGE NAVI]------------------*/
/*------------------------------------------------*/
.pagination {
    overflow: hidden;
}

.pagination, .wp-pagenavi {
    padding: 15px 42px 0;
}

.wp-pagenavi {
    position: relative;
    text-align: right;
    font-family: 'Goudy Bookletter 1911', Arial, sans-serif;
}

.wp-pagenavi span.current, .wp-pagenavi a {
    color: #c3c3c3;
    font-size: 30px;
    border: none;
}

.wp-pagenavi span.current, .wp-pagenavi a:hover {
    color: #c2c2c2;
}

.wp-pagenavi a, .wp-pagenavi span {
    padding: 3px 7px;
    color: #758b8d;
}


.foursixeight {
    margin: 0 0 15px 84px;
}

.nav ul li, .nav ul a {
    float: left;
}

.comment-wraap .navigation {
    padding: 10px 0;
}
.nav-previous {
    float: left;
}

.nav-next {
    float: right;
}

h3.reply-title small {
    display: block;
}

h3.reply-title small a {
    font-size: 12px;
    letter-spacing: 0;
}

.commentform input[type=text] {
    width: 40%;
    display: block;
    margin: 5px;
}

.comment {
    width: 91%;
}

.comment_navigation_top {
    padding-bottom: 12px;
}

@media only screen and (max-width: 960px){
    /*TO DO*/
}


@media only screen and (min-width: 760px) and (max-width: 960px){
}

@media only screen and (min-width: 525px) and (max-width: 759px){

    .container {
        width: 100%;
    }

    .top-buttons{
        width: 130%;
        left: 25%;
        top: 33%;
        z-index: 8;
    }

    .top-buttons span{
        font-size: 20px;
    }

    .project {
        float: left;
        position: relative;
        margin-right: 2.3%;
        margin-left: 2%;
        margin-top: 2.8%;
        width: 29%;
    }

    .project:first-of-type {
        display: none;
    }

    .project:last-of-type {
        display: none;
    }

    .call-to-action p {
        font-size: 2.2em;
        padding-bottom: 17px;
        padding-top: 17px;
    }

    .container-inner{
        width: 100%;
    }

    .left-area{
        width: 100%;
    }

    .sidebar{
        width: 100%;
    }

    .content-top {
        background: none;
        padding-top: 0;
    }

    .content-area {
        background: none;
        padding: 0;
    }
}

@media only screen and (min-width: 390px) and (max-width: 524px){

    .footer-widget{
        width: 100%;
    }

    .container {
        width: 100%;
        margin: 0 auto;
        position: relative;
        padding:0;
    }

    .heading a {
        font-size: 25px;
        line-height: 0;
    }
    .top-bottom{
        height: 400px;
    }

    .description p {
        font-size: 15px;
        width: 100%;
    }

    .featured {
        padding: 0;
        margin-top: 0;
        position: relative;
    }

    .top-buttons{
        width: 130%;
        left: 10%;
        top: 26%;
    }

    .top-buttons span{
        font-size: 18px;
    }

    .service{
        width: 95%;
        margin-bottom: 10px;
    }

    .call-to-action p {
        font-size: 1.6em;
        padding-bottom: 17px;
        padding-top: 17px;
    }

    .recent-projects{
        display: none;
    }
    .left-area{
        width: 100%;
    }

    .sidebar{
        width: 100%;
    }

    .content-top {
        background: none;
        padding-top: 0;
    }

    .content-area {
        background: none;
        padding: 0;
    }
}
/* ... */

